fix: #15: add z-index for tests in pipeline

--- a/src/components/globals/Footer/Footer.scss
+++ b/src/components/globals/Footer/Footer.scss
@@ -1,4 +1,5 @@
 .footer {
+  z-index: $footer;
   color: $color-black-60;
 
   &__inner {
